tests/functional/lang/eval-fail-toJSON-toString-not-string.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail-toJSON-toString-not-string.nix:1:1:
            1| builtins.toJSON { __toString = self: 42; }
             | ^
            2|

       … while evaluating the result of the `__toString` attribute

       error: cannot coerce an integer to a string: 42
